# ExecBoxMCP

./: README.md  config.json  main.py  pyproject.toml  run_execboxmcp.bat  run_execboxmcp.py  run_execboxmcp.sh  run_execboxmcp_direct.py  run_server.bat  run_server.py  run_server.sh  test_fast_agent_connection.py  test_mcp_protocol.py  test_server_creation.py  test_stdio_mcp.py
src/: main.py
src/execbox/: __init__.py  mcp_server.py
tests/: test_execboxmcp.py
