[project]
name = "ExecBoxMCP"
version = "0.1.0"
description = "Simple MCP server for command execution on Windows via Powershell. Supports restricting commands and working directories."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastmcp>=2.7.0",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]